[tool.poetry]
name = "pytest-logging-end-to-end-test-tool"
version = "1.0.2"
description = ""
authors = ["Ryan Faircloth <ryan@dss-i.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
PyYAML = ">5.0,<7"
Jinja2 = "^3.1.2"
Faker = "^13.15.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins]
pytest11 = { plugin = "pytest_logging_end_to_end_test_tool.plugin"}
